compat(jei): add collapsible groups for tankless fluid pipes